[package]
name = "pg_ibc_0_1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ethers = "2.0.13"
alloy-primitives = { version = "0.7.6", features = ["serde"] }
alloy-sol-types = "0.7.6"
anyhow = "1.0.86"
hex = "0.4.3"

[dev-dependencies]
pgrx-tests = "=0.11.3"
criterion = "0.3"
base64 = "0.22.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
